k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqi-backend
  namespace: aqi
  labels:
    app: aqi-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: aqi-backend

  template:
    metadata:
      labels:
        app: aqi-backend

    spec:
      containers:
        - name: backend
          image: ashisven/aqi-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
