k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: aqi

spec:
  selector:
    app: aqi-backend

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
